--- a/quicksilver-utils-async/Cargo.toml
+++ b/quicksilver-utils-async/Cargo.toml
@@ -20,11 +20,13 @@ web-sys = ["web_sys", "js-sys", "wasm-bindgen"]
 futures-util = { version = "0.3.1", default-features = false, features = ["alloc"] }
 std_web = { version = "0.4.20", package = "stdweb", features = ["futures-support"], optional = true }
 js-sys = { version = "0.3", package = "js-sys", optional = true }
-web_sys = { version = "0.3", package = "web-sys", optional = true }
+web_sys = { version = "0.3", package = "web-sys", optional = true, features = ["console", "BinaryType", "MessageEvent", "WebSocket"] }
+url = "2.1.1"
 wasm-bindgen = { version = "0.2.45", optional = true }
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies.async-std]
-version = "1.4.0"
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+async-std = "1.4.0"
+tokio-tungstenite = "0.9.0"
 
 [lib]
 name = "quicksilver_utils_async"
