--- a/quicksilver-utils-async/Cargo.toml
+++ b/quicksilver-utils-async/Cargo.toml
@@ -18,15 +18,18 @@ web-sys = ["web_sys", "js-sys", "wasm-bindgen"]
 
 [dependencies]
 futures-util = { version = "0.3.1", default-features = false, features = ["alloc"] }
+futures-io = "0.3.1"
 std_web = { version = "0.4.20", package = "stdweb", features = ["futures-support"], optional = true }
 js-sys = { version = "0.3", package = "js-sys", optional = true }
-web_sys = { version = "0.3", package = "web-sys", optional = true, features = ["console", "BinaryType", "MessageEvent", "WebSocket"] }
+web_sys = { version = "0.3", package = "web-sys", optional = true, features = ["BinaryType", "MessageEvent", "WebSocket"] }
 url = "2.1.1"
 wasm-bindgen = { version = "0.2.45", optional = true }
+log = "0.4"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 async-std = "1.4.0"
-tokio-tungstenite = "0.9.0"
+async-tls = "0.6.0"
+soketto = "0.3.2"
 
 [lib]
 name = "quicksilver_utils_async"
