--- a/quicksilver-utils-async/Cargo.toml
+++ b/quicksilver-utils-async/Cargo.toml
@@ -25,6 +25,7 @@ web_sys = { version = "0.3", package = "web-sys", optional = true, features = ["
 url = "2.1.1"
 wasm-bindgen = { version = "0.2.45", optional = true }
 log = "0.4"
+surf = "1.0.3"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 async-std = "1.4.0"
