--- a/quicksilver-utils-async/Cargo.toml
+++ b/quicksilver-utils-async/Cargo.toml
@@ -30,9 +30,10 @@ surf = "1.0.3"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 async-std = "1.4.0"
-async-tls = "0.6.0"
+async-tls = "0.7.0"
 soketto = "0.3.2"
-rustls = "0.16.0"
+rustls = "0.17.0"
+rustls-native-certs = "0.3.0"
 
 [lib]
 name = "quicksilver_utils_async"
