--- a/examples/monk/Cargo.toml
+++ b/examples/monk/Cargo.toml
@@ -18,7 +18,7 @@ quicksilver = "=0.4.0-alpha0.3"
 log = "*"
 platter = "*"
 send_wrapper = "*"
-specs = "*"
+specs = "0.15"
 specs-derive = "*"
 instant = "*"
 
